test/types/string/bradc/string2ints/badstring2uint64-2.good
badstring2uint64-2.chpl:3: error: Illegal character when converting from string to uint(64): '-'
